1. 不同语言的解析代码移动到resource目录中