@@ -8,8 +8,10 @@ import lombok.extern.slf4j.Slf4j;
 
 import java.io.File;
 import java.io.IOException;
+import java.net.URISyntaxException;
+import java.net.URL;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 
 @Slf4j
@@ -25,19 +27,20 @@ public class TsGenerator extends AbsGenerator {
         createFile(packageName + "/extension", getFileName(javaName), data, "extensions");
         // datastream拷贝
         try {
-            List<String> contents = Files.readAllLines(Path.of("./export/ts/Octets.ts"));
+            URL resourceUrl = getClass().getResource("/export/ts/Octets.ts");
+            List<String> contents = Files.readAllLines(Paths.get(resourceUrl.toURI()));
             String path = packageName + "/datastream/" + "Octets.ts";
             File file = new File(StringConst.OUTPUT_CODE_DIR, path);
             FileUtil.writeUtf8Lines(contents, file);
             log.info("write ts file :: {}", file);
-        } catch (IOException e) {
+        } catch (IOException | URISyntaxException e) {
             throw new RuntimeException(e);
         }
     }
 
     @Override
     public void createFile(String packageName, String javaName, Object data, String template) {
-        String text = generate("/template/ts",template + ".ftl", data);
+        String text = generate("/template/ts", template + ".ftl", data);
         String path = packageName.replace(".", "/") + "/" + javaName + ".ts";
         File file = new File(StringConst.OUTPUT_CODE_DIR, path);
         FileUtil.writeUtf8String(text, file);
